--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,5 +2,6 @@
 	"@metadata": {
 		"authors": []
 	},
-	"externalarticles-desc": "Preloads source from external pages"
+	"externalarticles-desc": "Preloads source from external pages",
+	"externalarticles-article-loaded": "This article has been automatically loaded from $1."
 }
