Create documentation for externalarticles-article-loaded
Thread:
https://translatewiki.net/wiki/Thread:Translating_talk:MediaWiki/About_MediaWiki:Externalarticles-article-loaded/ksh

Change-Id: I73900385ba5c2000d4f6e6b2716cc89321fbaa11

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -6,5 +6,6 @@
 			"Umherirrender"
 		]
 	},
-	"externalarticles-desc": "{{desc|name=External Articles|url=https://www.mediawiki.org/wiki/Extension:ExternalArticles}}\n\"source\" refers \"source wikitext code\"."
+	"externalarticles-desc": "{{desc|name=External Articles|url=https://www.mediawiki.org/wiki/Extension:ExternalArticles}}\n\"source\" refers \"source wikitext code\".",
+	"externalarticles-article-loaded": "Notifies that this page has been automatically loaded from an external site. \nParameters:\n* $1 - The URL of the external site from which the page was loaded."
 }
