--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+== 2017-02-21 version 0.4.0 ==
+* Add system for importing text files.
+
 == 2017-02-21 version 0.3.0 ==
 * Switch to use the extension registration system (and therefore increase MediaWiki version requirement to 1.24).
 
